Closed Bug 255566 Opened 22 years ago Closed 21 years ago

All Urdu Characters are not joining as suppose to join.

Categories

(Core :: Layout: Text and Fonts, defect)

x86
Windows 98
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: nhabbasi, Assigned: smontagu)

References

()

Details

(Keywords: fixed-aviary1.0, fixed1.7, testcase)

Attachments

(3 files)

User-Agent: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.7) Gecko/20040707 Firefox/0.9.2 Build Identifier: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.7) Gecko/20040707 Firefox/0.9.2 Urdu like Arabic change shape in writing with reference to the Characters comming befer or after. If you see the page in IE Characters are properly joining whereas in Mozilla (firebox or any) few Characters don't join properly. Please note every thing in the page is in unicode (charset=utf-8). This bug force Urdu Viewer / Web Designer to avoid Mozilla. Reproducible: Always Steps to Reproduce: 1. 2. 3.
Can you post a screenshot comparing Gecko/IE6 rendering, at least highliting what's wrongly rendered ? Can you produce a minized testcase ?
Assignee: general → mkaply
Component: DOM: Views and Formatting → Layout: BiDi Hebrew & Arabic
QA Contact: ian → zach
In The firebox Sample the last alphabet of the Third word is not joining the previous alphabet, whereas in Ie it is joined properly.
http://www.unicode.org/charts/collation/chart_Arabic.html Please click the link and search for 6cc, 1) Every time you enter alphabet x6cc it changes its shape @ earlier / following alphabet. It changes to fbfe,fbff,fbfd or fbfc. 2) What happening in Mozilla everytime when the alphabet x6cc comes before the alphabet x6ba it is not changing. It show the shape of 6cc whereas it is suppose to change to fbfe. It changes to fbfe in IE. In all the other occurrence alphabet x6cc changes to respective shape in Mozilla but not with x6ba.
Marking NEW since it has a testcase and good analysis (eventhough I cannot judge being on urdu specialist).
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: testcase
Taking bug.
Assignee: mkaply → smontagu
Attached patch PatchSplinter Review
This patch adds the missing mapping from U+06BA ARABIC LETTER NOON GHUNNA to the matching presentation forms U+FB9E and U+FB9F, and while I was in the files I checked gJoiningClass against the current version of http://www.unicode.org/Public/UNIDATA/ArabicShaping.txt and made the following corrections: U+0649 ALEF MAKSURA from eRJ (right-joining) to eDJ (double-joining) U+0656 SUBSCRIPT ALEF from eNJ (non-joining) to eTr (transparent) U+0657 INVERTED DAMMA from eNJ (non-joining) to eTr (transparent) U+0658 MARK NOON GHUNNA from eNJ (non-joining) to eTr (transparent) U+06BA NOON GHUNNA from eNJ (non-joining) to eDJ (double-joining) U+06DD END OF AYA from eTR (transparent) to eNJ (non-joining) U+06DE START OF RUB EL HIZB from eTR (transparent) to eNJ (non-joining)
Attachment #156499 - Flags: superreview?(rbs)
Attachment #156499 - Flags: review?(jshin)
Comment on attachment 156499 [details] [diff] [review] Patch r=jshin
Attachment #156499 - Flags: review?(jshin) → review+
(In reply to comment #7) > Created an attachment (id=156499) > Patch > This patch adds the missing mapping from U+06BA ARABIC LETTER NOON GHUNNA to > the matching presentation forms U+FB9E and U+FB9F, and while I was in the files > I checked gJoiningClass against the current version of > http://www.unicode.org/Public/UNIDATA/ArabicShaping.txt and made the following > corrections: > U+0649 ALEF MAKSURA from eRJ (right-joining) to eDJ (double-joining) > U+0656 SUBSCRIPT ALEF from eNJ (non-joining) to eTr (transparent) > U+0657 INVERTED DAMMA from eNJ (non-joining) to eTr (transparent) > U+0658 MARK NOON GHUNNA from eNJ (non-joining) to eTr (transparent) > U+06BA NOON GHUNNA from eNJ (non-joining) to eDJ (double-joining) > U+06DD END OF AYA from eTR (transparent) to eNJ (non-joining) > U+06DE START OF RUB EL HIZB from eTR (transparent) to eNJ (non-joining) Thanks for Patch, How can I check in my computer, or I have to download new, Nazir
Attachment #156499 - Flags: superreview?(rbs) → superreview+
Patch checked in. If you download a nightly build tomorrow, you should see the fix. The rendering will probably still not be perfect in all fonts until bug 218887 (or equivalents in other platforms) is fixed.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment on attachment 156499 [details] [diff] [review] Patch Requesting approval for branch and aviary. This is a minimal risk patch since it only changes data tables, and improves rendering of Urdu, a language with over 100 million speakers world-wide.
Attachment #156499 - Flags: approval1.7.3?
Attachment #156499 - Flags: approval-aviary?
Comment on attachment 156499 [details] [diff] [review] Patch a=mkaply for aviary and 1.7.3
Attachment #156499 - Flags: approval1.7.3?
Attachment #156499 - Flags: approval1.7.3+
Attachment #156499 - Flags: approval-aviary?
Attachment #156499 - Flags: approval-aviary+
(In reply to comment #11) > (From update of attachment 156499 [details] [diff] [review]) > Requesting approval for branch and aviary. This is a minimal risk patch since > it only changes data tables, and improves rendering of Urdu, a language with > over 100 million speakers world-wide. > Hi Simon, How come it is fixed in Firefox bot not in Mozilla 1.7.3
1.7.3 wasn't released from the main 1.7 branch. Apart from some specific security fixes it's the same as 1.7.2
Component: Layout: BiDi Hebrew & Arabic → Layout: Text
QA Contact: zach → layout.fonts-and-text
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: