Correct the joining of some Urdu characters. Bug 255566, r=jshin, sr=rbs.